Finished the remaining sections css styling and overflow issue for mobile.

--- a/styles.css
+++ b/styles.css
@@ -1035,6 +1035,10 @@ a {
 
     /*  SECTION 1   */
 
+    #section1 {
+        overflow: hidden;
+    }
+
     .sect1__container {
         padding-top: 96px;
     }
@@ -1074,11 +1078,12 @@ a {
 
     #section2 {
         padding: 218px 24px 0 24px;
+        overflow: hidden;
     }
 
     .sect__title {
         margin: 0 0 18px 0;
-        letter-spacing: 1.70px;
+        letter-spacing: 2px;
     }
 
     .sect__para {
@@ -1133,6 +1138,10 @@ a {
 
     /*  SECTION 3   */
 
+    #section3 {
+        overflow: hidden;
+    }
+
     .columns__container {
         flex-direction: column-reverse;
     }
@@ -1164,6 +1173,7 @@ a {
     /*  SECTION 4   */
 
     #section4 {
+        overflow: hidden;
         padding: 160px 0 0 0;
     }
 
@@ -1208,6 +1218,7 @@ a {
     /*  SECTION 5   */
 
     #section5 {
+        overflow: hidden;
         padding: 150px 0 0 0;
     }
 
@@ -1252,6 +1263,7 @@ a {
     /*  SECTION 6   */
 
     #section6 {
+        overflow: hidden;
         padding-top: 200px;
     }
 
@@ -1308,6 +1320,151 @@ a {
 
     .pay-plan2__container {
         padding: 44px 80px 36px 80px;
+    }
+
+    /*  SECTION 7   */
+
+    #section7 {
+        overflow: hidden;
+        padding-top: 90px;
+    }
+
+    .sect7__container {
+        flex-direction: column;
+    }
+
+    .sect7__column1 {
+        padding: 0 32px;
+    }
+
+    .sect7__column2 {
+        padding: 60px 18px 0 18px;
+    }
+
+    .testimonial {
+        padding-top: 32px;
+        max-width: 430px;
+        margin: auto;
+    }
+
+    .review__para {
+        padding: 20px 18px 0 18px;
+    }
+
+    .reviewer__container {
+        flex-direction: column;
+        padding-top: 60px;
+    }
+
+    .reviewer {
+        flex-direction: column;
+    }
+
+    .arrows {
+        justify-content: center;
+        margin: 0 0 0 0;
+        padding: 28px 0 0 0;
+    }
+
+    .reviewer__img {
+        width: 66px;
+    }
+
+    .reviewer__info {
+        padding: 10px 0 0 0;
+    }
+
+    /*  SECTION 8   */
+
+    #section8 {
+        overflow: hidden;
+        padding-top: 200px;
+    }
+
+    .decor {
+        max-width: 420px;
+        max-height: 360px;
+        height: 100%;
+        width: 100%;
+        margin: auto;
+    }
+
+    .sect8__container {
+        justify-content: center;
+        align-items: center;
+        height: 500px;
+    }
+
+    .contact {
+        flex-direction: column;
+    }
+
+    .contact__title {
+        margin: 0;
+        font-size: 24px;
+        max-width: 380px;
+        text-align: center;
+    }
+
+    .sect__buttons {
+        flex-direction: column;
+        align-items: center;
+        padding: 24px 0 0 0;
+    }
+
+    .start__btn,
+    .contact__btn {
+        margin: 0;
+        padding: 14px 26px;
+        font-size: 14px;
+    }
+
+    .contact__btn {
+        margin-top: 14px;
+    }
+
+    /*  SECTION 9   */
+
+    #section9 {
+        overflow: hidden;
+        padding-top: 20px;
+    }
+
+    .footer__links {
+        padding: 46px 0 50px 0;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .category__container {
+        align-items: center;
+        padding: 36px 16px 0 16px;
+    }
+
+    .links__container {
+        flex-wrap: wrap;
+        padding: 0 40px;
+    }
+
+    .footer__copyright {
+        padding: 84px 0 60px 0;
+        flex-direction: column;
+    }
+
+    .logo {
+        padding: 0 0 46px 0;
+    }
+
+    .copyright {
+        font-size: 14px;
+    }
+
+    .socials {
+        padding-top: 28px;
+    }
+
+    .social__link-container {
+        padding: 8px;
     }
 }
 
